Fixed that there no longer is a giant gap

--- a/src/open_inwoner/scss/components/Grid/Grid.scss
+++ b/src/open_inwoner/scss/components/Grid/Grid.scss
@@ -62,7 +62,7 @@
     width: 100%;
 
     @media (min-width: 768px) {
-      margin-top: calc(130px);
+      margin-top: -130px;
       width: 50%;
     }
   }
